--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,11 @@
     box-sizing: border-box;
 }
 
+.itemListContainer{
+    display: flex;
+    flex-direction: column;
+    font-size: 50px;
+    text-align: center;
+    align-items: center;
+}
+
